Removed dropper "drop" button
Removed time readout
Moved pool height readout to the side
Removed phet logo from control panel based on CM's recommendation
Use phetcommon text for "reset all" string
Fixed: sensor nodes occluded by control panel
Fixed: Fluid Density button and associated control fall off left edge of play area
Added water tower and water drops
Factored out RelativeDragHandler
# 0.00.05 (46345) Nov 18, 2010
Fixed: Pipe top and bottom edges in wrong z-ordering
# 0.00.04 (46343) Nov 18, 2010
Fixed: Fluid density slider should change fluid color
Fixed: pipe grab handles can get dissociated from the mouse
Fixed: particles should fit within pipe
Fixed: velocity and pressure hot spots are different sizes
Fixed: colored fluid not being removed from model/view
converted from Function<T,Void> to VoidFunction<T>
# 0.00.03 (46334) Nov 18, 2010
Fixed: Multiple clocks are running, caused by wiring up to new clock control panel
Fixed: Second tab clock always running
Fluid-flow: Fixed locations of sensors on startup so they display good initial values
Fluid-flow: Fixed crash on reset all
Show 0.9999 atm when lifted into the atmosphere so students don't think pressure doesn't decrease vs altitude
Fluid-flow: Moved grab handles to front layer
Fluid-flow: Restart clock on reset
Fluid-flow: Fixed: Reset all crashes the sim if particles are present
# 0.00.02 (46303) Nov 17, 2010
# 0.00.01 (46300) Nov 17, 2010
Fluid-flow: Added clock controls to play area
Fluid-flow: Fixed: Velocity and pressure sensor should use the same model as is used for particles velocity
Fluid-flow: Fixed: Shouldn't be able to drag pipe control points within a threshold distance of each other
Fluid-flow: Added images for dropper and bucket
Fluid-flow: Added a ruler
Fluid-flow: Moved reset all button to bottom right so it doesn't overlap the pipe
Added a ruler with English units
Centered pipe on flow tab
Added reset all
Fixed: Pressure gauges should read "?" when underground